# truegear_xinput_driver

./: .gitignore  Cargo.toml  README.md  build.bat
src/: inject_dll.rs  main.rs
src/true_gear/: def.rs  mod.rs
