[package]
name = "truegear_xinput_driver"
version = "0.1.0"
edition = "2021"

# 主执行文件
[[bin]]
name = "truegear_xinput_driver"
path = "src/main.rs"

# DLL库
[lib]
name = "xinput_hook"
path = "src/inject_dll.rs"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "psapi", "tlhelp32", "memoryapi", "libloaderapi", "errhandlingapi", "consoleapi", "wincon", "synchapi", "winbase"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.2"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio-tungstenite = { version = "0.27.0", features = ["connect"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "signal", "time", "sync", "fs", "io-util"] }
futures-util = "0.3"
once_cell = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"